build: Produce a production testmod jar as well
clean up the buildscript changes a touch as well